# LogisParse

./: .coverage  Northstar_ LogisParse B2B SaaS.md  README.md  Tech.md  coverage.xml
logisparse/: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  ARCHITECTURE.md  Dockerfile  Makefile  QUICKSTART.md  README.md  README__interno.md  alembic.ini  contexto-ia.txt  docker-compose.yml  extractor.py  logisparse_code.txt  package-lock.json  package.json  pyproject.toml  pytest.ini  requirements.txt  setup.py
logisparse/.github/workflows/: ci.yml
logisparse/app/: __init__.py  contexto-ia.txt  main.py
logisparse/app/api/: deps.py
logisparse/app/core/: config.py  database.py  exceptions.py  logging.py  middleware.py  security.py
logisparse/app/crud/: crud_document.py  crud_user.py
logisparse/app/models/: __init__.py  base.py  document.py  user.py
logisparse/app/schemas/: document.py  extraction.py  token.py  user.py
logisparse/app/services/: aws_textract_service.py  document_extractor.py  excel_service.py  file_manager.py  sii_mapper.py  upload_validation.py
logisparse/docs/: AI_EXTRACTION.md  ARCHITECTURE.md  FRONTEND_GUIDE.md
logisparse/frontend/: README.md  contexto-ia.txt  next-env.d.ts  package-lock.json  package.json  tailwind.config.ts  tsconfig.json
logisparse/frontend/src/: middleware.ts
logisparse/migrations/: env.py
logisparse/migrations/versions/: 001_initial.py  f2fa2eb8f195_add_data_corrections.py
logisparse/tests/: conftest.py
logisparse/tests/integration/: test_api.py
logisparse/tests/unit/: test_adapters.py  (+7 more)
(+35 files in other folders)
