[project]
name = "logisparse"
version = "0.1.0"
description = "Backend-first SaaS API for logistics document extraction."
requires-python = ">=3.12"
readme = "README.md"

[tool.black]
line-length = 100
target-version = ["py312"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM"]
ignore = ["B008"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-q --cov=app --cov-report=term-missing"

[tool.mypy]
python_version = "3.12"
plugins = ["pydantic.mypy"]
warn_unused_configs = true
disallow_untyped_defs = true
ignore_missing_imports = true
exclude = ["migrations"]
